unpackaged/main/default/objects/Xero_Invoice_Line_Item__c/Xero_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>XLN-{0000}</displayFormat>
        <label>Xero Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>