unpackaged/main/default/objects/Xero_Invoice_Line_Item__c/fields/Xero_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice__c</fullName>
    <label>Xero Invoice</label>
    <referenceTo>Xero_Invoice__c</referenceTo>
    <relationshipName>Xero_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>