unpackaged/main/default/objects/Xero_Invoice_Line_Item__c/fields/Xero_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Line_Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>Xero Line Item ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>